# ready

./: LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml
ready/: admin.py  apps.py  forms.py  models.py  tools.py  urls.py  views.py
ready/static/ready/: styles.css
ready/templates/ready/: base.html  firstaid_form.html  food_form.html  index.html  item_detail.html  iteminstance_detail.html  location_detail.html  supplies_form.html
